# simple-audio-programming

./: .flake8  .gitignore  ASSISTANT_CHECKLIST.md  COLAB_NOTEBOOK_SETUP.md  CONTRIBUTING.md  GITHUB_RELEASE_CHECKLIST.md  GITHUB_SETUP_GUIDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  run_tests.py  setup.py  test_imports.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-lite.yml  ci.yml  test.yml
audio_lib/: __init__.py  sequencer.py
audio_lib/core/: __init__.py  audio_config.py  wave_io.py
audio_lib/effects/: __init__.py  audio_effects.py  filters.py
audio_lib/instruments/: __init__.py  basic_instruments.py
audio_lib/synthesis/: __init__.py  envelopes.py  note_utils.py  oscillators.py
colab_lessons/: lesson_01_basics_and_sine_waves.ipynb  lesson_02_envelopes_and_adsr.ipynb  lesson_03_filters_and_sound_design.ipynb  lesson_04_audio_effects_and_dynamics.ipynb  lesson_05_midi_and_sequencer.ipynb  lesson_06_sampling_and_analysis.ipynb  lesson_07_final_project_and_performance.ipynb
examples/: README.md  basic_examples.py  debug_all.py  debug_envelopes.py  debug_instruments.py  debug_oscillators.py  educational_tutorial.py
tests/: __init__.py  test_audio_lib_comprehensive.py  test_notebook_scenarios.py  test_oscillators.py
