[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "simple-audio-programming"
version = "1.0.0"
description = "音響プログラミング学習用の教育的Pythonライブラリ"
authors = ["Simple Audio Programming Team <gen@ggszk.org>"]
readme = "README.md"
packages = [{include = "audio_lib"}]
homepage = "https://github.com/ggszk/simple-audio-programming"
repository = "https://github.com/ggszk/simple-audio-programming.git"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
scipy = "^1.7.0"
matplotlib = "^3.5.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.0"
black = "^22.0.0"
isort = "^5.10.0"
mypy = "^1.0.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["audio_lib"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
]

markers = [
    "slow: 実行時間の長いテスト",
    "integration: 統合テスト",
    "unit: 単体テスト",
    "lesson1: Lesson 1関連のテスト",
    "lesson2: Lesson 2関連のテスト", 
    "lesson3: Lesson 3関連のテスト",
    "lesson4: Lesson 4関連のテスト",
    "audio: 音声処理関連のテスト",
    "effects: エフェクト関連のテスト",
    "oscillators: オシレーター関連のテスト",
    "envelopes: エンベロープ関連のテスト",
]

filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
